service-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry-deployment
  labels:
    app: service-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: anirudhnallala/service-registry:latest
          ports:
            - containerPort: 8761
